Adding a new background image for the Hero, and updated text for SAMON pool

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 </div>
     
 
-<div class="hero-image hero-image-fullscreen" style="background-image: url('/SAMON-website/images/jason-blackeye-1191801-unsplash.jpg');">
+<div class="hero-image hero-image-fullscreen" style="background-image: url('/SAMON-website/images/kayti-coonjohn-aCSDWNy281c-unsplash.jpeg');">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>Hero - Hugo Small Business Theme</h1>
-      <p>Hero is a multipurpose Hugo theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site.</p>
+      <h1>Ticker: SAMON - Salmon Pool</h1>
+      <p>Salmon Pool is the Cardano Stake Pool supporting the Salmon Nation Decentralized Alliance (SANADA) and contributes half of the operator fees and 80% of the 4% margin to SANADA.&#34;</p>
     </div>
     <div class="hero-down">
       <a href="#home">
