added logo, and simplified hero description.

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>Ticker: SAMON - Salmon Pool</h1>
-      <p>Salmon Pool is the Cardano Stake Pool supporting the Salmon Nation Decentralized Alliance (SANADA) and contributes half of the operator fees and 80% of the 4% margin to SANADA.&#34;</p>
+      <h1>Salmon Pool - a Cardano Stake Pool</h1>
+      <p>Salmon Pool is the Cardano Stake Pool supporting the Salmon Nation Decentralized Alliance. Ticker: SAMON</p>
     </div>
     <div class="hero-down">
       <a href="#home">
