--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>Salmon Pool - a Cardano Stake Pool</h1>
-      <p>Salmon Pool is the Cardano Stake Pool supporting the Salmon Nation Decentralized Alliance. Ticker: SAMON</p>
+      <h1>Salmon Pool - Ticker: SAMON</h1>
+      <p>A Mission-driven Cardano stake pool in the heart of Salmon Nation, supporting the vision and mission of the Salmon Nation Decentralized Alliance (SANADA).</p>
     </div>
     <div class="hero-down">
       <a href="#home">
