--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>SAMON - Salmon Pool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-<meta name="description" content="Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site." />
-<meta property="og:title" content="Hugo Hero Theme" />
+<meta name="description" content="Salmon Pool supports the mission and vision of the Salmon Nation Decentralized Alliance" />
+<meta property="og:title" content="Salmon Pool [SAMON]" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://hugo-hero.netlify.app" />
+<meta property="og:url" content="https://salmonpool.io" />
 <meta property="og:image" content="https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png" />
 <meta property="og:description" content="Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site." />
 <meta name="twitter:card" content="summary" />
@@ -75,10 +75,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="https://salmon-nation-decentralized-alliance.github.io/SAMON-website"><img height=29px width=36px alt="Salmon Pool" src="/SAMON-website/images/logo.png" /></a>
+      <a href="https://salmon-nation-decentralized-alliance.github.io/SAMON-website"><img height=217px width=36px alt="Salmon Pool" src="/SAMON-website/images/logo.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="https://salmon-nation-decentralized-alliance.github.io/SAMON-website"><img height=36px width=36px alt="Salmon Pool" src="/SAMON-website/images/logo-mobile.svg" /></a>
+      <a href="https://salmon-nation-decentralized-alliance.github.io/SAMON-website"><img height=36px width=36px alt="Salmon Pool" src="/SAMON-website/images/logo.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
