--- a/services/index.html
+++ b/services/index.html
@@ -131,8 +131,7 @@
     <h2 class="service-title">
       <a href="https://www.sanada.eco/services/pacific-town-hall/">Pacific Town Hall</a>
     </h2>
-    <p>Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum...</p>
+    <p>Pacific Town Hall is a bi-weekly meeting for Cardano and Catalyst enthusiasts to discuss topics at a time that works...</p>
   </div>
 </div></div>
     
