--- a/services/pacific-town-hall/index.html
+++ b/services/pacific-town-hall/index.html
@@ -118,9 +118,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum quin. Rupes vetat videndo, armigerae
-crimen habet Priamum nec.</p>
+        <div class="content"><p>Pacific Town Hall is a bi-weekly meeting for Cardano and Catalyst enthusiasts to discuss topics at a time that works better for people living on the west coast of North America and around the Pacific.</p>
 <h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
 <p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
 Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
