--- a/purpose/connection/index.html
+++ b/purpose/connection/index.html
@@ -151,8 +151,8 @@
         <div class="sub-footer-inner">
           <ul>
             <li><strong>Phone: </strong></li>
-            <li><strong>Email: </strong><a href="mailto:info@snada.eco">
-                info@snada.eco</a></li>
+            <li><strong>Email: </strong><a href="mailto:info@sanada.eco">
+                info@sanada.eco</a></li>
           </ul>
           <ul>
             <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
